<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">MySaarBahn</string>
	<string name="No_location_service_active">No geopositioning service active</string>
	<string name="Best_location_services">Best location serices are: %s.</string>
	<string name="NoOldPositionFound">There is no last positon. We need time to get one...</string>
	<string name="I_will_use_PROVIDER">I will use %s.</string>
	<string name="Please_activate_PROVIDER">Please activate: %s</string>
	<string name="I_will_use_last_known_position">Starting with last known position</string>
	<string name="to_next_station">You are %s km from the next Saarbahn station (%s) away.</string>
	<string name="YourActualPosition">Youre actual positon</string>
	<string name="Position">Position</string>
	<string name="Roadmap">Roadmap</string>
	<string name="Map">Map</string>
	<string name="to_selected_station">The selected station %s is %s km away.</string>
	<string name="select_other_station">Or select an other station</string>
	<string name="direction">direction</string>
	<string name="no_connection">no</string>
	<string name="No_location_service_active_no_help">With an active location service you get help more exactly. Please activate it.</string>
	<string name="me">me</string>
	<string name="I_am_here">I am here</string>
	<string name="can_not_open_data">Can not open data file %s</string>
	<string name="downloading_data">Downloading data</string>
	<string name="installing_roadmap">Installing roadmap data</string>
	<string name="all_roadmap_data_installed">All roadmap data installed</string>
	<string name="install_data">Install roadmap data</string>
	<string name="installHint">mySaarBahn will download and install the roadmap to your phone. This can make a while. Please be patient.</string>
	<string name="No_data_found_Insteallation">No Data installed. Starting download and installation.</string>
	<string name="start_station">Start station</string>
	<string name="installTitle">Welcome to mySaarBahn</string>
	<string name="installText">This software needs roadmap / actual data. It will try to download an install it into internal database. To do this, you need an internet connection. Please click on &quot;Install&quot; to start downloads and install data. This can make a very long time (up to 1 min.). Do not close this app untill all data was installed!</string>
	<string name="install">Install</string>
	<string name="installing">This take a while...</string>
	<string name="updateText">This software needs actual data. It will try to download and update the internal database. To do this, you need an internet connection. Please click on &quot;Install&quot; to start update. This can make a very long time (up to 1 min.). Do not close this app untill all data was installed!</string>
	<string name="next_conections_from">Your next connections from %s are:</string>
	<string name="destination_time">dir. %s: %s</string>
	<string name="selected_station_time">to %s: %s</string>
	<string name="from_selected_station_time">from %s: %s</string>
	<string name="calculating_roadmap">calculating roadmap...</string>
	<string name="here_are_exact_times">Cklick here to see exact departure times on Saarbahn homepage.</string>
<string name="ZoomIn">zoom in</string>
<string name="ZoomOut">zoom out</string>
<string name="centerZoom">center</string>
</resources>
